--- a/Transportation.html
+++ b/Transportation.html
@@ -73,6 +73,63 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Population Changes in Chateaugay</h2>
+      <hr>
+      <h5>April 24, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Just looking through the 2020 US Census data for Chateaugay…</p>
+
+<p>Village population was recorded as 735. That is down from 833 in 2010 (a 12.4% decrease).
+The entire Town's population was recorded as 1,743. That is down from 2,155 in 2010 (a 19% drop).
+</p>
+
+<p><b>A FEW NOTES:</b></p>
+
+<p>The population decreases since 2010 are not particularly surprising in light of lower resident numbers throughout the entire North Country.</p>
+
+<p>735 residents represents the Village's lowest number of residents since 1880. The village was incorporated in 1868 with an estimated population of 1100. It was at its largest in 1920, when 1291 people lived inside the Village limits.</p>
+
+<p>The 19% drop in the Town's population is deceptive. For the 2010 count, the Correctional Facility in Chateaugay was operating with approximately 250 inmates counted in the 2010 total. The facility, which was opened in 1990 as a drug treatment facility, was closed on July 24, 2014. Therefore, the 2020 count shows the loss of the inmate numbers (which inflates the percentage of the decrease) but also represents an additional, approximate population drop of 160 local residents.</p>
+
+<p>The Town's largest population ever, was in 1850 when 3,728 residents were counted in the Census. That coincided with the opening of the Northern Railroad (later known as the Ogdensburg and Lake Champlain RR, and later, as the Rutland RR). The 30 years following the opening of the train route represented Chateaugay's heyday as the economic fallout from the railroad led to a time of increased business activity and rising employment opportunities. At one time, the Chateaugay freight depot was the busiest on the entire line which stretched from Ogdensburg to Rouses Point.</p>
+
+<p>Above are images of the village and surrounding area. The first is from an 1876 map. The second is from Google Earth in 2022.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>"Linen" Postcards</h2>
       <hr>
       <h5>October 17, 2021 | Mick Jarvis</h5>
@@ -84,45 +141,45 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 6</div>
     <img src="blog/imgs/2021-10-17_linenpostcards/linenpostcards_06.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -149,7 +206,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Carrying the Mail in the Olden Days</h2>
@@ -163,21 +220,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2021-08-15_maildelivery/maildelivery_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -241,7 +298,7 @@
 
 
 <!-- Site Page -->
-<div id="blog1">
+<div id="blog2">
   <div class="container">
     <div class="section-title text-center center">
       <h2>Railroad: Freight Operation</h2>
@@ -255,33 +312,33 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">1 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">2 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">3 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides3 none">
+  <div class="mySlides4 none">
      <div class="numbertext">4 / 4</div>
     <img src="blog/imgs/2021-05-28_railroad-freightoperation/railroad-freightop_04.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
 </div>
 <br>
 
@@ -360,7 +417,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>The Railroad in Chateaugay</h2>
@@ -374,81 +431,81 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">1 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">2 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">3 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">4 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">5 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">6 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">7 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">8 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">9 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">10 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">11 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides4 none">
+  <div class="mySlides5 none">
      <div class="numbertext">12 / 12</div>
     <img src="blog/imgs/2021-04-30_therailroadinchateaugay/therailroadinchateaugay_12.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 3)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 3)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 4)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 4)">&#10095;</a>
 </div>
 <br>
 
