--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,63 @@
 <div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
+      <h2>Population Changes in Chateaugay</h2>
+      <hr>
+      <h5>April 24, 2022 | Mick Jarvis</h5>
+    </div>
+
+     <!-- Slideshow container -->
+<div class="slideshow-container">
+
+<!-- Full-width images with number and caption text -->
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">1 / 2</div>
+    <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_01.jpg" style="width:100%">
+  </div>
+
+
+  <div class="mySlides1 none">
+     <div class="numbertext">2 / 2</div>
+    <img src="blog/imgs/2022-04-24_populationchanges/populationchanges_02.jpg" style="width:100%">
+  </div>
+
+
+      <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+</div>
+<br>
+
+
+        <div class="blog-text">
+        <p>Just looking through the 2020 US Census data for Chateaugay…</p>
+
+<p>Village population was recorded as 735. That is down from 833 in 2010 (a 12.4% decrease).
+The entire Town's population was recorded as 1,743. That is down from 2,155 in 2010 (a 19% drop).
+</p>
+
+<p><b>A FEW NOTES:</b></p>
+
+<p>The population decreases since 2010 are not particularly surprising in light of lower resident numbers throughout the entire North Country.</p>
+
+<p>735 residents represents the Village's lowest number of residents since 1880. The village was incorporated in 1868 with an estimated population of 1100. It was at its largest in 1920, when 1291 people lived inside the Village limits.</p>
+
+<p>The 19% drop in the Town's population is deceptive. For the 2010 count, the Correctional Facility in Chateaugay was operating with approximately 250 inmates counted in the 2010 total. The facility, which was opened in 1990 as a drug treatment facility, was closed on July 24, 2014. Therefore, the 2020 count shows the loss of the inmate numbers (which inflates the percentage of the decrease) but also represents an additional, approximate population drop of 160 local residents.</p>
+
+<p>The Town's largest population ever, was in 1850 when 3,728 residents were counted in the Census. That coincided with the opening of the Northern Railroad (later known as the Ogdensburg and Lake Champlain RR, and later, as the Rutland RR). The 30 years following the opening of the train route represented Chateaugay's heyday as the economic fallout from the railroad led to a time of increased business activity and rising employment opportunities. At one time, the Chateaugay freight depot was the busiest on the entire line which stretched from Ogdensburg to Rouses Point.</p>
+
+<p>Above are images of the village and surrounding area. The first is from an 1876 map. The second is from Google Earth in 2022.</p>
+        </div>
+    </div>
+</div>
+
+
+<!-- Site Page -->
+<div id="blog2">
+  <div class="container">
+    <div class="section-title text-center center">
       <h2>Shopping in 1892</h2>
       <hr>
       <h5>March 27, 2022 | Mick Jarvis</h5>
@@ -84,93 +141,93 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">1 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">2 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_02.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">3 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_03.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">4 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_04.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">5 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_05.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">6 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_06.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">7 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_07.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">8 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_08.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">9 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_09.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">10 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_10.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">11 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_11.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">12 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_12.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">13 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_13.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides1 none">
+  <div class="mySlides2 none">
      <div class="numbertext">14 / 14</div>
     <img src="blog/imgs/2022-03-27_shopping1892/shopping1892_14.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 0)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
 </div>
 <br>
 
@@ -193,7 +250,7 @@
 
 
 <!-- Site Page -->
-<div id="blog2">
+<div id="blog1">
   <div class="container">
     <div class="section-title text-center center">
       <h2>2022 Update - Newsletter & Summer Exhibit</h2>
@@ -207,21 +264,21 @@
 <!-- Full-width images with number and caption text -->
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">1 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_01.jpg" style="width:100%">
   </div>
 
 
-  <div class="mySlides2 none">
+  <div class="mySlides3 none">
      <div class="numbertext">2 / 2</div>
     <img src="blog/imgs/2022-03-12_2022update-2/2022update-2_02.jpg" style="width:100%">
   </div>
 
 
       <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 1)">&#10095;</a>
+  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
 </div>
 <br>
 
@@ -244,74 +301,6 @@
 <p>Above is an image of the first page from the upcoming issue. Also shown is an illustration a friend sent me. I think it's good for a chuckle or two.</p>
 
 <p>Think spring!!</p>
-        </div>
-    </div>
-</div>
-
-
-<!-- Site Page -->
-<div id="blog1">
-  <div class="container">
-    <div class="section-title text-center center">
-      <h2>2022 Update - Newsletter & Summer Exhibit</h2>
-      <hr>
-      <h5>February 21, 2022 | Mick Jarvis</h5>
-    </div>
-
-     <!-- Slideshow container -->
-<div class="slideshow-container">
-
-<!-- Full-width images with number and caption text -->
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">1 / 3</div>
-    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_01.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">2 / 3</div>
-    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_02.jpg" style="width:100%">
-  </div>
-
-
-  <div class="mySlides3 none">
-     <div class="numbertext">3 / 3</div>
-    <img src="blog/imgs/2022-02-21_2022update-1/2022update-1_03.jpg" style="width:100%">
-  </div>
-
-
-      <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1, 2)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1, 2)">&#10095;</a>
-</div>
-<br>
-
-
-        <div class="blog-text">
-        <p>At first glance, the photos above don’t seem to be Chateaugay history-related. But, they are actually a part of the two major projects we are working on right now.</p> 
-
-<p>First, is our newsletter preparation; which is an on-going process. We are editing our next issue, which will be mailed to members next month. We think you will enjoy the upcoming articles – everything from airplane building in Chateaugay, to an historic home in the village, to a very notable business block on East Main and also a memory of farming in the 1940s.</p>
-
-<p>Our second project is our upcoming summer exhibit. The research and development necessary for the display has begun in earnest. It will open on June 29th and will be available for viewing all summer. It will examine the Early Years of the History of Chateaugay Lake. Among our exhibit display topics will be: </p>
-
-<li>The earliest settlement and settlers</li>
-<li>Transportation and its development as people and commerce came and went from the early Lakes</li>
-<li>The building of the Forge Dam and the effects of raising the water levels of the Lakes and the Narrows</li>
-<li>The Native American seasonal presence on the Lake and the various legends that have been told about their time in the area</li> 
-<li>A look at the earliest country schools in the area around the Lakes</li>
-<li>A framed display of the works of artist, Arthur Fitzwilliam Tait. He visited the Bellows Lake House (later known as the Banner House) for several years during the mid-1800s. We have seven of his works that we believe were set in the area around Chateaugay Lake. </li>
-
-<br />
-
-<p>As the photos show, the framing of the Tait prints is well under way. The specific image included above (3/3) is probably the one we are all most familiar with. This ice fishing scene will be available at the exhibit, not in the version shown here, but as a large vintage print, mounted in a wonderful, ornate antique frame. The other six Tait scenes will all be newly matted and framed and will show his works both as original oil paintings and as lithographs produced by Currier and Ives. Each view will be complimented with a text panel, explaining the history and details of each work.</p>
-
-<p>We are looking forward to readying the newsletter for our members. We think we have another interesting and well-illustrated issue. The summer exhibit promises to be both information filled and eye catching. We hope you enjoy them both.</p>
-
-<p>Our group may be small, but we try to remain busy and working to present more of the history of Chateaugay and area each year. </p>
-
-<p>Thanks for your continued support.</p>
         </div>
     </div>
 </div>
