--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <!--COVID Banner -->
 <body>
   <div class="alert-box">
-    <span class="badge">COVID-19 Alert</span>We are open for the season! At this time, masking is not required and is at the discretion of each individual. For our schedule of open hours, please see the "Calendar" or "Visit" sections below. Thank you!
+    <span class="badge">Open Hours & Summer Exhibit</span>We are open for the season! Our summer exhibit, Early Chateaugay Lakes, will be open June 29 - September 28. Click <a href="CHS_ExhibitPoster_2022-Summer.pdf">HERE </a>to view our exhibit poster and learn more about it. At this time, masking is not required and is at the discretion of each individual. For our schedule of open hours, please see the "Calendar" or "Visit" sections below. Thank you!
   </div>  
 </body>
  	
@@ -496,7 +496,7 @@
   <div class="container text-center">
     <div class="fnav">
       <p>Copyright &copy; 2021 Chateaugay Historical Society. </br>
-	  Last Modified [April 18, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
+	  Last Modified [April 27, 2022]. Designed by Chateaugay Historical Society. Template by <a href="http://www.templatewire.com" rel="nofollow">TemplateWire</a></p>
     </div>
   </div>
 </div>
